# oss-issue-scout

./: CONTRIBUTING.md  README.en.md  README.md  api.py  cli.py  github_api.py  index.html  output.py  pyproject.toml  scoring.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
oss_issue_scout/: __init__.py  cli.py  config.py  github_api.py  output.py  scoring.py  scoring_presets.py
tests/: __init__.py  test_cli.py  test_config.py  test_github_api.py  test_output.py  test_scoring.py
